@@ -1,0 +1,39 @@
+/* bug-3410.c.in
+   ?
+   type: unsigned char, unsigned int, bint
+ */
+
+#include <testfwk.h>
+#include <stdbool.h>
+
+#ifdef __SDCC
+typedef unsigned _BitInt(8) bint;
+#elif __clang_major__ == 11
+typedef unsigned _ExtInt(8) bint;
+#else
+typedef unsigned int bint;
+#endif
+
+typedef struct {
+    {type} a : 6;
+    {type} b : 2;
+
+} Part;
+
+bool test( {type} c, const Part *part ) {
+
+    if ( c < part->a ) return true;
+    return false;
+}
+
+void testBug( void ) {
+	Part part = { .a = 48, .b = 1 };
+
+	ASSERT (!test( 254, &part )); // Wrong result here for unsigned char
+	ASSERT (!test( 128, &part )); // Wrong result here for unsigned char
+	ASSERT (!test( 127, &part ));
+	ASSERT (!test( 64, &part ));
+	ASSERT (!test( 63, &part ));
+	ASSERT (test( 40, &part ));
+}
+
